--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,13 @@ jobs:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: |
-       echo "Iniciando login"
-       docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-       echo "Fin del login"
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
+    - name: Build Docker Image
+      run: |
+        docker build -t luismendozait/docker-graphql:0.0.2 .
+
+    - name: Push Docker Image
+      run: |
+        docker push luismendozait/docker-graphql:0.0.2 .  
+        
