--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,5 +29,5 @@ jobs:
 
     - name: Push Docker Image
       run: |
-        docker push luismendozait/docker-graphql:0.0.2 .  
+        docker push luismendozait/docker-graphql:0.0.2
            
