--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,8 +26,10 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t luismendozait/docker-graphql:0.0.2 .
+        docker build -t luismendozait/docker-graphql:latest .
 
     - name: Push Docker Image
       run: |
         docker push luismendozait/docker-graphql:0.0.2
+        docker push luismendozait/docker-graphql:latest
            
